# MuonsAndMatter

./: .gitignore  .gitmodules  README.md  build_cpp.sh  check_boxy_detector.py  convert_to_training_file.py  do_complex_3d_plotting.py  do_muon_shield_geometry.py  do_timing_studies.py  env.sh  magnet_paramsX.py  main_f.py  muons_get_energy_loss_data.py  plot_muon_energy_losses.py  requirements.txt  set_container.sh
checks/: check_random_vectors.py  plot_shapes.py  plot_shapes_2.py
chore/: find_cmake_command.py
cpp/: BoxyDetectorConstruction.cc  BoxyDetectorConstruction.hh  CMakeLists.txt  CustomEventAction.cc  CustomEventAction.hh  CustomSteppingAction.cc  CustomSteppingAction.hh  DetectorConstruction.cc  DetectorConstruction.hh  GDetectorConstruction.cc  GDetectorConstruction.hh  MuonSlabs.cc  PrimaryGeneratorAction.cc  PrimaryGeneratorAction.hh  SlimFilm.cc  SlimFilm.hh  SlimFilmSensitiveDetector.cc  SlimFilmSensitiveDetector.hh  init_vis.mac  main.cc
plots/: .check
python/junk/: do_muon_shield_geometry.py  main_f.py
python/lib/: gigantic_sphere.py  matplotlib_settings.py  ship_muon_shield.py  timelib.py
python/lib/magnet_params/: params_design_8.py  params_design_9.py
python/lib/reference_designs/: params.py  params_design_8.py  params_design_8_ref.py  params_design_9.py
python/matter_muons/: matter_muons.py
